# DLRliquiditysweep

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ticks.csv  train_mini_ppo.py
.github/workflows/: ci.yml
config/: default_config.yaml  exp_2025-long.yaml  train.yaml
data/: ES_2024-01-01.csv  eurusd_ticks.csv
drl_liquidity_sweep/: __init__.py
drl_liquidity_sweep/config/: default_config.yaml
drl_liquidity_sweep/data/: loader.py
drl_liquidity_sweep/env/: liquidity_env.py
drl_liquidity_sweep/scripts/: evaluate.py  train.py
drl_liquidity_sweep/utils/: __init__.py  callbacks.py  rewards.py
logs/exp_kz_round/PPO_1/: events.out.tfevents.1749920579.Threadripper.26268.0
models/: ppo_1000000.zip.equity.pt  vecnorm.pkl
results/: metrics.json
scripts/: evaluate.py  fetch_and_resample_mt5.py  save_vecnorm_from_checkpoint.py  train.py  train_cpu_vec.py  train_vec.py
tests/: __init__.py  test_data_loader.py  test_day_episode_length.py  test_env.py  test_env_commission.py  test_env_daily.py  test_env_dayreset.py  test_env_penalty.py  test_env_trade.py  test_equity_hist.py  test_equity_history.py  test_evaluate.py  test_loader.py  test_loader_barsize.py  test_rewards.py  test_train_smoke.py
