[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-liquidity-sweep"
version = "0.0.1"
description = "Deep RL Liquidity Sweep research framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"] 